# bi-clean-architecture-demo

./: main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: UncleJohn.agent.md
src/example_project/: ExampleImplementation.py  __main__.py  main.py
src/example_project/adapter/: README.md  __init__.py  protocols.py
src/example_project/adapter/interface/: frame_service.py  graphql_service.py
src/example_project/adapter/parser/: __init__.py
src/example_project/adapter/storage/: __init__.py
src/example_project/application/: README.md  __init__.py  use_case.py
src/example_project/composition/: README.md  __init__.py  context.py  frames.py
src/example_project/model/: README.md  __init__.py
